# isaac_ros_custom_bringup

./: CMakeLists.txt  README.md  package.xml
launch/: yolov8_foundationpose_bag.launch.py  yolov8_foundationpose_realsense.launch.py  yolov8_foundationpose_realsense_remote.launch.py  yolov8_inference.launch.py
